실습 13/실습 13.txt
1)
    a)
        beakui-MacBook-Air:src bjh970913$ javac Test01.java
        beakui-MacBook-Air:src bjh970913$ java Test01
        Point01@7852e922
        beakui-MacBook-Air:src bjh970913$

    b)
        beakui-MacBook-Air:src bjh970913$ rm Point01.class
        beakui-MacBook-Air:src bjh970913$ java Test01
        Exception in thread "main" java.lang.NoClassDefFoundError: Point01
                at Test01.main(Test01.java:7)
        Caused by: java.lang.ClassNotFoundException: Point01
                at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
                at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
                at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
                at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
                ... 1 more
        beakui-MacBook-Air:src bjh970913$

        Test01 클래스에서 사용되는 Point01 클래스를 찾을 수 없다.

2)
    a)
        beakui-MacBook-Air:src bjh970913$ javac Test02.java
        beakui-MacBook-Air:src bjh970913$ java Test02
        java.lang.ArrayIndexOutOfBoundsException: 4
                at Test02.sum(Test02.java:18)
                at Test02.main(Test02.java:9)
        beakui-MacBook-Air:src bjh970913$

        배열의 범위를 초과하여 접근 하였다.

    b)
        1.
            /Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/bin/java -Didea.launcher.port=7532 "-Didea.launcher.bin.path=/Applications/IntelliJ IDEA.app/Contents/bin" -Dfile.encoding=UTF-8 -classpath "/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/charsets.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/deploy.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/cldrdata.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/dnsns.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/jaccess.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/jfxrt.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/localedata.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/nashorn.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/sunec.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/sunjce_provider.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/sunpkcs11.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/ext/zipfs.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/javaws.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/jce.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/jfr.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/jfxswt.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/jsse.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/management-agent.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/plugin.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/resources.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/jre/lib/rt.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/ant-javafx.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/dt.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/javafx-mx.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/jconsole.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/packager.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/sa-jdi.jar:/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home/lib/tools.jar:/Users/bjh970913/projects/KU-computer-programming-II/out/production/실습 13:/Applications/IntelliJ IDEA.app/Contents/lib/idea_rt.jar" com.intellij.rt.execution.application.AppMain Test02
            java.lang.ArrayIndexOutOfBoundsException: 4
            	at Test02.sum(Test02.java:18)
            	at Test02.main(Test02.java:9)
            	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
            	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
            	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
            	at java.lang.reflect.Method.invoke(Method.java:498)
            	at com.intellij.rt.execution.application.AppMain.main(AppMain.java:147)

        2.

            4

            java.lang.ArrayIndexOutOfBoundsException: 4

            Trace Info
            method sum(Test03:26)
            method main(Test03:9)
            method invoke0(sun.reflect.NativeMethodAccessorImpl:-2)
            method invoke(sun.reflect.NativeMethodAccessorImpl:62)
            method invoke(sun.reflect.DelegatingMethodAccessorImpl:43)
            method invoke(java.lang.reflect.Method:498)
            method main(com.intellij.rt.execution.application.AppMain:147)

        1번 방식은 빠르게 애러가 발생한 위치를 찾을 수 있는 정보를 제공하고 2번 방식은 애러로부터 사용ㅈ가 원하는 정보를 사용자가 원하는 형태로 가공하여 출력할 수 있다

3)
    InvalidRadius04: Radius = -1.0
    end

4)
    false
    true
    8

5)
    <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">

    <html>

    <head>

    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">

    <meta http-equiv="refresh" content="0;url=/mbshome/mbs/university/index.do">

    <title></title>

    </head>

    <body>

    </body>

    </html>

6)
    beakui-MacBook-Air:src bjh970913$ javac Test07.java
    Test07.java:7: error: Abst07 is abstract; cannot be instantiated
            Abst07 x = new Abst07();
                       ^
    1 error

7)
    (3.0,3.0)
